configmaps-secrets/demo-configmap-pod-1.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: demo-cm-env-pod-1
spec:
  containers:
    - name: app-container
      command:  ["/bin/sh", "-c", "env"]
      image: gcr.io/google_containers/busybox
  restartPolicy: Never
