configmaps-secrets/demo-configmap-pod-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-cm-env-pod-2
spec:
  containers:
    - name: app-container
      image: gcr.io/google_containers/busybox
      command:  ["/bin/sh", "-c", "env"]
  restartPolicy: Never
