configmaps-secrets/demo-configmap-pod-3.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: demo-cm-env-pod-3-ok
spec:
  containers:
    - name: app-container
      image: gcr.io/google_containers/busybox
      command: [ "/bin/sh", "-c", "env" ]
  restartPolicy: Never

---
apiVersion: v1
kind: Pod
metadata:
  name: demo-cm-env-pod-3-not-ok
spec:
  containers:
    - name: app-container
      image: gcr.io/google_containers/busybox
      command: [ "/bin/sh", "-c", "env" ]
  restartPolicy: Never
