configmaps-secrets/demo-configmap-pod-4.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-cm-env-pod-4
spec:
  containers:
    - name: app-container
      image: gcr.io/google_containers/busybox
      command: ["/bin/sh", "-c", "$(STARTUP_COMMAND)"]
  restartPolicy: Never
