configmaps-secrets/demo-configmap-pod-6.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: demo-cm-env-pod-6
spec:
  containers:
    - name: app-container
      image: gcr.io/google_containers/busybox
      command: [ "/bin/sh", "-c", "--" ]
      args: [ "while true; do sleep 30; done;" ]
      volumeMounts:
      - name: config-volume
        mountPath: /etc/config
  volumes:
    - name: config-volume
      configMap:
        name: app-config-volume-2
  restartPolicy: Never

---
apiVersion: v1
kind: Pod
metadata:
  name: demo-cm-env-pod-6-2
spec:
  containers:
    - name: app-container
      image: gcr.io/google_containers/busybox
      command: [ "/bin/sh", "-c", "--" ]
      args: [ "while true; do sleep 30; done;" ]
      volumeMounts:
      - name: config-volume
        mountPath: /etc/config/
        subPath: var2
  volumes:
    - name: config-volume
      configMap:
        name: app-config-volume-2
        items:
        - key: var2
          path: var2
  restartPolicy: Never
